--- a/ofkpuweb/WebContent/conf/styles/ofkpuweb-menu.css
+++ b/ofkpuweb/WebContent/conf/styles/ofkpuweb-menu.css
@@ -1,6 +1,6 @@
 @CHARSET "UTF-8";
 div.ofk-menu-content {
-	
+	z-index: 200;
 }
 div.ofk-menu {
 	position: absolute;
@@ -9,44 +9,101 @@ div.ofk-menu {
     display: flex;
     -webkit-align-items: center;
     align-items: center;
-    -webkit-justify-content: center;
-    justify-content: ;
-    font-family: flex-start;
+    -webkit-justify-content: flex-start;
+    justify-content: flex-start;
+    font-family: verdana;
     border-radius: 7px;
+    background-image: url("../images/menu.png");
 }
 div.ofk-menu-caption {
+	height: 100px;
 	width: 200px;
 	background-image: url("../images/ofk.png");
-	
-}
-div.ofk-menu-items {
+	background-size: cover;
 	display: -webkit-flex;
     display: flex;
     -webkit-align-items: center;
     align-items: center;
     -webkit-justify-content: center;
+    justify-content: center;
+}
+div.ofk-menu-caption a {
+	font-size: 20px;
+	font-weight: bold;
+	text-decoration: none;
+}
+div.ofk-menu-caption a:visited, div.ofk-menu-caption a:link, div.ofk-menu-caption a:active {
+	color: navy;
+}
+div.ofk-menu-caption a:hover {
+	color: blue;
+}
+
+div.ofk-menu-items {
+	display: -webkit-flex;
+    display: flex;
+    -webkit-align-items: center;
+    align-items: center;
+    -webkit-justify-content: flex-start;
     justify-content: flex-start;
-    font-family: flex-start;
-    background-image: url("../images/menu.png");
 }
 div.ofk-menu-group {
 	display: -webkit-flex;
     display: flex;
     -webkit-align-items: center;
     align-items: center;
-    -webkit-justify-content: center;
+    -webkit-justify-content: flex-start;
     justify-content: flex-start;
-    font-family: flex-start;
+}
+div.ofk-menu-group-vr {
+	border-right: 1px solid lightcoral;
+	border-left: 1px solid lightyellow;
+	height: 80px;
 }
 div.ofk-menu-container {
-	padding: 20px 0;
+	padding: 0 20px 0;
 }
+
 div.ofk-menu-item-item {
 	display: -webkit-flex;
     display: flex;
     -webkit-align-items: center;
     align-items: center;
-    -webkit-justify-content: center;
+    -webkit-justify-content: flex-start;
     justify-content: flex-start;
-    font-family: flex-start;
+    height: 20px;
+}
+div.ofk-menu-item-item-pfx {
+	font-size: 8px;
+	font-weight: bold;
+	color: red;
+	padding: 0 10px;
+	
+}
+
+div.ofk-menu-item-item-link {
+	
+	display: -webkit-flex;
+    display: flex;
+    -webkit-align-items: center;
+    align-items: center;
+}
+div.ofk-menu-item-item-link a {
+	font-size: 12px;
+	color: navy;
+	text-decoration: none;
+}
+div.ofk-menu-item-item-link a:hover {
+	color: blue;
+}
+
+
+div.ofk-menu-empty {
+	width: 20px;
+}
+div.ofk-menu-invisible {
+	display: none;
+}
+div.ofk-menu-visible {
+	display: flex;
 }
