--- a/ofkpuweb/WebContent/conf/styles/ofkpuweb-commons.css
+++ b/ofkpuweb/WebContent/conf/styles/ofkpuweb-commons.css
@@ -2,6 +2,7 @@
 body {
 	background-color: lightyellow;
 	background-image: url("../images/ofkpubg.png");
+	background-repeat: repeat-x;
 	margin: 0;
 	padding: 0;
 }
