--- a/ofkpuweb/WebContent/conf/styles/ofkpuweb.css
+++ b/ofkpuweb/WebContent/conf/styles/ofkpuweb.css
@@ -3,3 +3,4 @@
 @IMPORT url("ofkpuweb-hdr.css");
 @IMPORT url("ofkpuweb-menu.css");
 @IMPORT url("ofkpuweb-cnt.css");
+@IMPORT url("ofkpuweb-win.css");
